--- a/plugin/open_activity/android/app/src/main/AndroidManifest.xml
+++ b/plugin/open_activity/android/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/maps_api_key" />
+            android:value="AIzaSyBPuFRT0hNHItOh7ttkf5g2Ua4bBSdSLDY" />
         <activity
             android:name=".view.java.com.example.navigationapidemo.NavViewActivity"
             android:exported="false"
